// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CapsHeading custom color 1`] = `
<div
  className="CapsHeading__StyledCapsHeading-rbzrmz-0 hbfBGJ"
>
  <h3>
    60 frames per second
  </h3>
</div>
`;

exports[`Storyshots CapsHeading custom selector 1`] = `
<div
  className="CapsHeading__StyledCapsHeading-rbzrmz-0 cRUeFz"
>
  <h4>
    Capture HDR gameplay videos
  </h4>
</div>
`;

exports[`Storyshots CapsHeading default 1`] = `
<div
  className="CapsHeading__StyledCapsHeading-rbzrmz-0 cRUeFz"
>
  <h3>
    Capture 4K UHD gameplay
  </h3>
</div>
`;

exports[`Storyshots Footer default 1`] = `
<div
  className="Footer__StyledFooter-sc-1h91qcb-4 cXeOxh"
>
  <div
    className="Footer__PositionedMainMenu-sc-1h91qcb-2 gjbGnY"
  >
    <nav
      className="MainMenu__StyledMainMenu-sc-1jfwqxv-2 cxIrom"
    >
      <ul>
        <li>
          <a
            className="MainMenu__StyledLink-sc-1jfwqxv-0 fmwHXl"
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span>
              Home
            </span>
            <img
              alt=""
              src="/static/icon-arrow-right.png"
            />
          </a>
        </li>
        <li>
          <a
            className="MainMenu__StyledLink-sc-1jfwqxv-0 fmwHXl"
            href="/shop"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span>
              Shop
            </span>
            <img
              alt=""
              src="/static/icon-arrow-right.png"
            />
          </a>
        </li>
        <li>
          <a
            className="MainMenu__StyledExternalLink-sc-1jfwqxv-1 cakXWo"
            href="https://twitter.com/RigRecord"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span>
              Twitter
            </span>
            <img
              alt=""
              src="/static/icon-arrow-up-right.png"
            />
          </a>
        </li>
        <li>
          <a
            className="MainMenu__StyledExternalLink-sc-1jfwqxv-1 cakXWo"
            href="https://www.reddit.com/r/RecordRig/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <span>
              Reddit
            </span>
            <img
              alt=""
              src="/static/icon-arrow-up-right.png"
            />
          </a>
        </li>
      </ul>
    </nav>
  </div>
  <div
    className="Footer__StyledInfo-sc-1h91qcb-3 feokqa"
  >
    <div
      className="Footer__StyledLogo-sc-1h91qcb-1 jrNKSh"
    >
      <img
        alt=""
        src="/static/recordrig-logo.png"
      />
    </div>
    <p
      className="Footer__StyledAddress-sc-1h91qcb-0 egRMeQ"
    >
      Industrieweg 46
      <br />
      6541 TW Nijmegen
      <br />
      The Netherlands
    </p>
  </div>
</div>
`;

exports[`Storyshots Heading centered 1`] = `
<div
  className="Heading__StyledHeading-sc-12rv6sd-0 gzLOrg"
>
  <h2>
    <span>
      Record your gameplay in the highest quality.
    </span>
  </h2>
</div>
`;

exports[`Storyshots Heading custom color 1`] = `
<div
  className="Heading__StyledHeading-sc-12rv6sd-0 hVUZmD"
>
  <h2>
    <span>
      4K 60FPS + HDR videos are the future.
    </span>
  </h2>
</div>
`;

exports[`Storyshots Heading custom selector 1`] = `
<div
  className="Heading__StyledHeading-sc-12rv6sd-0 djDQiS"
>
  <h1>
    <span>
      RecordRig technical specifications.
    </span>
  </h1>
</div>
`;

exports[`Storyshots Heading default 1`] = `
<div
  className="Heading__StyledHeading-sc-12rv6sd-0 djDQiS"
>
  <h2>
    <span>
      Cinematic 4K HDR video example.
    </span>
  </h2>
</div>
`;

exports[`Storyshots MainMenu default 1`] = `
<nav
  className="MainMenu__StyledMainMenu-sc-1jfwqxv-2 cxIrom"
>
  <ul>
    <li>
      <a
        className="MainMenu__StyledLink-sc-1jfwqxv-0 fmwHXl"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          Home
        </span>
        <img
          alt=""
          src="/static/icon-arrow-right.png"
        />
      </a>
    </li>
    <li>
      <a
        className="MainMenu__StyledLink-sc-1jfwqxv-0 fmwHXl"
        href="/shop"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          Shop
        </span>
        <img
          alt=""
          src="/static/icon-arrow-right.png"
        />
      </a>
    </li>
    <li>
      <a
        className="MainMenu__StyledExternalLink-sc-1jfwqxv-1 cakXWo"
        href="https://twitter.com/RigRecord"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          Twitter
        </span>
        <img
          alt=""
          src="/static/icon-arrow-up-right.png"
        />
      </a>
    </li>
    <li>
      <a
        className="MainMenu__StyledExternalLink-sc-1jfwqxv-1 cakXWo"
        href="https://www.reddit.com/r/RecordRig/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          Reddit
        </span>
        <img
          alt=""
          src="/static/icon-arrow-up-right.png"
        />
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Storyshots MenuBar default 1`] = `
<nav
  className="MenuBar__StyledTopMenu-sc-1n2uiiq-5 bHIivz"
>
  <ul>
    <li>
      <a
        className="MenuBar__StyledLogo-sc-1n2uiiq-0 bNPGYV"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <img
          alt=""
          src="/static/recordrig-logo.png"
        />
      </a>
    </li>
    <li>
      <a
        className="MenuBar__StyledShopButton-sc-1n2uiiq-1 kluQLd"
        href="/shop"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Shop
      </a>
    </li>
    <li>
      <button
        className="MenuBar__StyledShoppingBagButton-sc-1n2uiiq-3 iOKgEx"
      >
        <img
          alt=""
          src="/static/icon-shopping-bag.png"
        />
        <span>
          Shopping Bag
        </span>
      </button>
    </li>
    <li>
      <button
        className="MenuBar__StyledMenuButton-sc-1n2uiiq-4 gLHVyq"
      >
        <img
          alt=""
          src="/static/icon-menu.png"
        />
        <span>
          Menu
        </span>
      </button>
    </li>
  </ul>
</nav>
`;

exports[`Storyshots MenuBar items in bag 1`] = `
<nav
  className="MenuBar__StyledTopMenu-sc-1n2uiiq-5 bHIivz"
>
  <ul>
    <li>
      <a
        className="MenuBar__StyledLogo-sc-1n2uiiq-0 bNPGYV"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <img
          alt=""
          src="/static/recordrig-logo.png"
        />
      </a>
    </li>
    <li>
      <a
        className="MenuBar__StyledShopButton-sc-1n2uiiq-1 kluQLd"
        href="/shop"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Shop
      </a>
    </li>
    <li>
      <button
        className="MenuBar__StyledShoppingBagButton-sc-1n2uiiq-3 iOKgEx"
      >
        <img
          alt=""
          src="/static/icon-shopping-bag.png"
        />
        <span>
          Shopping Bag
        </span>
        <span
          className="MenuBar__StyledBagIndicator-sc-1n2uiiq-2 eziWdc"
        >
          2
        </span>
      </button>
    </li>
    <li>
      <button
        className="MenuBar__StyledMenuButton-sc-1n2uiiq-4 gLHVyq"
      >
        <img
          alt=""
          src="/static/icon-menu.png"
        />
        <span>
          Menu
        </span>
      </button>
    </li>
  </ul>
</nav>
`;

exports[`Storyshots Paragraph custom color 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#13171a",
    }
  }
>
  <p
    className="Paragraph__StyledParagraph-q6tii9-0 dpEDmS"
  >
    Demand for high-quality gameplay videos is booming. Now, with RecordRig, recording games in the same high quality you play them is easier than ever. Capture your gameplay in its full glory and give your audience the complete, immersive experience that they crave.
  </p>
</div>
`;

exports[`Storyshots Paragraph default 1`] = `
<p
  className="Paragraph__StyledParagraph-q6tii9-0 bygGob"
>
  Demand for high-quality gameplay videos is booming. Now, with RecordRig, recording games in the same high quality you play them is easier than ever. Capture your gameplay in its full glory and give your audience the complete, immersive experience that they crave.
</p>
`;

exports[`Storyshots Section default 1`] = `
<div
  className="Section__StyledSection-sc-2usp0l-3 gzOxNB"
>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
  </p>
</div>
`;

exports[`Storyshots Section intro 1`] = `
<div
  className="Section__StyledSection-sc-2usp0l-3 gzOxNB"
>
  <div
    className="Section__StyledSectionIntro-sc-2usp0l-1 hHNJyg"
  >
    <div
      className="Heading__StyledHeading-sc-12rv6sd-0 djDQiS"
    >
      <h2>
        <span>
          Stream your gameplay like a pro.
        </span>
      </h2>
    </div>
    <p
      className="Paragraph__StyledParagraph-q6tii9-0 bygGob"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </p>
  </div>
</div>
`;

exports[`Storyshots Section rows 1`] = `
<div
  className="Section__StyledSection-sc-2usp0l-3 gzOxNB"
>
  <div
    className="Section__StyledSectionRow-sc-2usp0l-2 genIbo"
  >
    <div
      style={
        Object {
          "backgroundColor": "#d5d9e0",
          "width": "100%",
        }
      }
    >
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
      </p>
    </div>
  </div>
  <div
    className="Section__StyledSectionRow-sc-2usp0l-2 genIbo"
  >
    <div
      style={
        Object {
          "backgroundColor": "#d5d9e0",
          "width": "100%",
        }
      }
    >
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Section subsections 1`] = `
<div
  className="Section__StyledSection-sc-2usp0l-3 gzOxNB"
>
  <div
    className="Section__StyledSectionRow-sc-2usp0l-2 genIbo"
  >
    <div
      className="Section__StyledSubSection-sc-2usp0l-0 gzjOxm"
    >
      <div
        style={
          Object {
            "backgroundColor": "#d5d9e0",
            "width": "100%",
          }
        }
      >
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        </p>
      </div>
    </div>
    <div
      className="Section__StyledSubSection-sc-2usp0l-0 gzjOxm"
    >
      <div
        style={
          Object {
            "backgroundColor": "#d5d9e0",
            "width": "100%",
          }
        }
      >
        <p>
          I get the full height of my neighbour.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ShoppingBag 0 items 1`] = `
<div
  className="ShoppingBag__StyledShoppingBag-z0l3t5-3 bPAJhf"
>
  <p>
    You do not have anything in your shopping bag.
  </p>
</div>
`;

exports[`Storyshots ShoppingBag 1 item 1`] = `
<div
  className="ShoppingBag__StyledShoppingBag-z0l3t5-3 bPAJhf"
>
  <div
    className="ShoppingBag__StyledItem-z0l3t5-0 dZkFtX"
  >
    <p>
      RecordRig - Stealth Black
    </p>
    <p>
      + 2TB HDD
    </p>
    <p>
      1
    </p>
  </div>
  <div
    className="ShoppingBag__StyledSubtotal-z0l3t5-1 dPFrgQ"
  >
    <p>
      Subtotal:
      <span>
         
        0
         EUR
      </span>
    </p>
    <p>
      Shipping:
      <span>
         FREE
      </span>
    </p>
  </div>
  <button
    className="ShoppingBag__StyledCheckoutButton-z0l3t5-2 bglkkg"
  >
    Checkout
  </button>
</div>
`;

exports[`Storyshots ShoppingBag 2 item 1`] = `
<div
  className="ShoppingBag__StyledShoppingBag-z0l3t5-3 bPAJhf"
>
  <div
    className="ShoppingBag__StyledItem-z0l3t5-0 dZkFtX"
  >
    <p>
      RecordRig - Pristine White
    </p>
    
    <p>
      1
    </p>
  </div>
  <div
    className="ShoppingBag__StyledSubtotal-z0l3t5-1 dPFrgQ"
  >
    <p>
      Subtotal:
      <span>
         
        0
         EUR
      </span>
    </p>
    <p>
      Shipping:
      <span>
         FREE
      </span>
    </p>
  </div>
  <button
    className="ShoppingBag__StyledCheckoutButton-z0l3t5-2 bglkkg"
  >
    Checkout
  </button>
</div>
`;

exports[`Storyshots ShoppingBag Default 1`] = `
<div
  className="ShoppingBag__StyledShoppingBag-z0l3t5-3 bPAJhf"
>
  <p>
    You do not have anything in your shopping bag.
  </p>
</div>
`;

exports[`Storyshots Tile bottom image 1`] = `
<div
  style={
    Object {
      "maxWidth": "488px",
    }
  }
>
  <div
    className="Tile__StyledTile-sc-1xmork7-2 fJbIiT"
  >
    <div
      className="Tile__StyledContainer-sc-1xmork7-0 eIgsrs"
    >
      <div
        className="CapsHeading__StyledCapsHeading-rbzrmz-0 eQRCzd"
      >
        <h3>
          Record 4K HDR on Xbox One
        </h3>
      </div>
      <p
        className="Paragraph__StyledParagraph-q6tii9-0 eMSMBJ"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      </p>
    </div>
    <div
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      <img
        alt=""
        src="/static/controller-xbox.png"
        style={
          Object {
            "maxWidth": "100%",
            "verticalAlign": "bottom",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Tile custom colors 1`] = `
<div
  style={
    Object {
      "maxWidth": "488px",
    }
  }
>
  <div
    className="Tile__StyledTile-sc-1xmork7-2 fJbIiT"
  >
    <div
      className="Tile__StyledContainer-sc-1xmork7-0 eIgsrs"
    >
      <img
        alt=""
        src="/static/icon-record-blue-large.png"
        style={
          Object {
            "height": "58px",
            "marginBottom": "20px",
            "width": "58px",
          }
        }
      />
      <div
        className="CapsHeading__StyledCapsHeading-rbzrmz-0 kqwFmk"
      >
        <h3>
          Record with the click of a button
        </h3>
      </div>
      <p
        className="Paragraph__StyledParagraph-q6tii9-0 eMSMBJ"
      >
        RECentral comes pre-installed and pre-configured, ready to start recording. Spend less time configuring and getting to know your tool, and more time doing what you do best: gaming.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tile default 1`] = `
<div
  style={
    Object {
      "maxWidth": "488px",
    }
  }
>
  <div
    className="Tile__StyledTile-sc-1xmork7-2 doOUJO"
  >
    <div
      className="Tile__StyledContainer-sc-1xmork7-0 eIgsrs"
    >
      <div
        className="CapsHeading__StyledCapsHeading-rbzrmz-0 cRUeFz"
      >
        <h3>
          Pay later or pay in parts
        </h3>
      </div>
      <p
        className="Paragraph__StyledParagraph-q6tii9-0 bygGob"
      >
        If you're located in Austria, Denmark, Finland, Germany, the Netherlands, Norway, Sweden or the United Kingdom you can use Klarna to place your order now and Pay Later, after you've received your RecordRig. Or, Slice It: pay in equal parts over a larger period of time, completely interest-free, only starting payments after having received your RecordRig.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tile link 1`] = `
<div
  style={
    Object {
      "maxWidth": "488px",
    }
  }
>
  <a
    className="Tile__StyledLinkTile-sc-1xmork7-1 cxICbS"
    href="/tech-specs"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <div
      className="Tile__StyledContainer-sc-1xmork7-0 eIgsrs"
    >
      <div
        className="CapsHeading__StyledCapsHeading-rbzrmz-0 jcaeaT"
      >
        <h3>
          Technical specifications
        </h3>
      </div>
      <p
        style={
          Object {
            "fontSize": "48px",
            "lineHeight": "56px",
            "margin": "64px 0",
          }
        }
      >
        Get the full list of what's included with RecordRig.
      </p>
      <p
        style={
          Object {
            "color": "#009c98",
            "fontSize": "18px",
            "textAlign": "right",
          }
        }
      >
        Learn more
      </p>
    </div>
  </a>
</div>
`;

exports[`Storyshots Tile top image 1`] = `
<div
  style={
    Object {
      "maxWidth": "488px",
    }
  }
>
  <div
    className="Tile__StyledTile-sc-1xmork7-2 ibUpQB"
  >
    <div
      style={
        Object {
          "textAlign": "center",
        }
      }
    >
      <img
        alt=""
        src="/static/4k_hdr_god_of_war_white.jpg"
        style={
          Object {
            "maxWidth": "100%",
            "verticalAlign": "bottom",
          }
        }
      />
    </div>
    <div
      className="Tile__StyledContainer-sc-1xmork7-0 eIgsrs"
    >
      <div
        className="CapsHeading__StyledCapsHeading-rbzrmz-0 hbfBGJ"
      >
        <h3>
          Brightest whites
        </h3>
      </div>
      <p
        className="Paragraph__StyledParagraph-q6tii9-0 bygGob"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tile wide panel with contained image 1`] = `
<div
  style={
    Object {
      "maxWidth": "992px",
    }
  }
>
  <div
    className="Tile__StyledTile-sc-1xmork7-2 fJbIiT"
  >
    <div
      className="Tile__StyledContainer-sc-1xmork7-0 eIgsrs"
    >
      <div
        className="CapsHeading__StyledCapsHeading-rbzrmz-0 kqwFmk"
      >
        <h3>
          Record with confidence using RECentral
        </h3>
      </div>
      <p
        className="Paragraph__StyledParagraph-q6tii9-0 eMSMBJ"
      >
        Maecenas nec neque facilisis, aliquet sem sed, placerat lorem. Donec quis mauris risus. Quisque sodales diam ut elementum ultricies. Pellentesque laoreet commodo mauris, ut condimentum nisi cursus eget. In scelerisque at elit vitae dictum.
      </p>
      <div
        style={
          Object {
            "padding": "48px 0",
            "textAlign": "center",
          }
        }
      >
        <img
          alt=""
          src="/static/4k_hdr_streaming_capturing_software.png"
          style={
            Object {
              "maxWidth": "100%",
              "verticalAlign": "bottom",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
